# arribada-turtle-tag-lora-firmware

./: .gitignore  README.md
Hal/Inc/: syshal_axl.h  syshal_batt.h  syshal_ble.h  syshal_flash.h  syshal_gpio.h  syshal_gps.h  syshal_i2c.h  syshal_pmu.h  syshal_pressure.h  syshal_rtc.h  syshal_spi.h  syshal_time.h  syshal_timer.h  syshal_uart.h  syshal_usb.h
Hal/STM32F072CB/Src/: syshal_gpio.c  syshal_i2c.c  syshal_pmu.c  syshal_spi.c  syshal_time.c  syshal_uart.c
Inc/: debug.h  main.h  version.h
STM32F072CB/: Makefile
STM32F072CB/Inc/: bsp.h  stm32f0xx_hal_conf.h
STM32F072CB/OpenOCD/: STM32F042K6_OpenOCD.cfg  stm32f0x.cfg
STM32F072CB/Src/: bsp.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Src/: debug.c  main.c
core/buffer/: buffer.c  buffer.h
core/cexception/: exceptions.h
core/config_if/: cmd.c  cmd.h  config_if.c  config_if.h
core/debug/: debug.c  debug.h
core/fs/: fs.c  fs.h  fs_priv.h
core/logging/: logging.h
core/ring_buffer/: ring_buffer.h
core/sm/: sm.c  sm.h
core/sm_main/: sm_main.c  sm_main.h
core/sys_config/: sys_config.c  sys_config.h
devices/axl/LSM9DS1/: LSM9DS1.c  LSM9DS1.h
devices/battery/BQ27621/: BQ27621.c  BQ27621.h
devices/ble/nRF52x/: nRF52x_regs.h  syshal_ble.c
devices/flash/S25FL128/: S25FL128.c
devices/gps/M8N/: M8N.c  M8N.h
devices/lora/irnas/: frame.c  irnas.c  message.c
devices/pressure/MS5803-14BA/: MS5803_14BA.c  MS5803_14BA.h
devices/pressure/MS5803_14BA/: MS5803_14BA.c  MS5803_14BA.h
devices/pressure/MS5803_xBA/: MS5803_xBA.c  MS5803_xBA.h
devices/pressure/MS5803_xBA/MS5803_05BA/: MS5803_05BA.c
devices/pressure/MS5803_xBA/MS5803_14BA/: MS5803_14BA.c
devices/pressure/MS5837_xBA/: MS5837_xBA.c  MS5837_xBA.h
devices/pressure/MS5837_xBA/MS5837_30BA/: MS5837_30BA.c
ports/stm32/: JLinkCommandFile.jlink  Makefile  STM32F042K6_OpenOCD.cfg  STM32F072RBTx_FLASH.ld  gdb.bat  main.c  stm32f0xx_hal_conf.h
ports/stm32/boards/arribada_v1/: bsp.c  bsp.h
ports/stm32/boards/arribada_v2/: bsp.c  bsp.h
ports/stm32/drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_pcd.c
ports/stm32/syshal/: syshal_firmware.c  syshal_gpio.c  syshal_i2c.c  syshal_pmu.c  syshal_rtc.c  syshal_spi.c  syshal_time.c  syshal_uart.c  syshal_usb.c
ports/stm32/usb/: usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_vendor.c  usbd_vendor.h
syshal/inc/: syshal_axl.h  syshal_batt.h  syshal_ble.h  syshal_firmware.h  syshal_flash.h  syshal_gpio.h  syshal_gps.h  syshal_i2c.h  syshal_lora.h  syshal_pmu.h  syshal_pressure.h  syshal_rtc.h  syshal_spi.h  syshal_switch.h  syshal_time.h  syshal_timer.h  syshal_uart.h  syshal_usb.h
syshal/src/: syshal_switch.c  syshal_timer.c
tests/: configure.ac
tests/gtest/: Ble_nRF52.cpp  Flash.cpp  Fs.cpp  Fs.test  Makefile.am  Ring_Buffer.cpp  Sm.cpp  Sm_Main.cpp  Sm_Main_GTest.cpp  cmock_options.yml  fetch-gtest.sh  generate-mocks.sh  verifUtils.sh
tests/gtest/mocks/: unity.c  unity.h
